# solver.actiontester

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
solverdef/: definition.xml
src/: main.f90
